force-app/main/default/objects/SAP_Companies__x/SAP_Companies__x.object-meta.xml
<CustomObject>
    <description>SAP_CompaniesSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SAP_CompaniesSet</externalName>
    <label>SAP_Companies</label>
    <pluralLabel>SAP_CompaniesSet</pluralLabel>
</CustomObject>