force-app/main/default/objects/SAP_Companies__x/fields/AddresNumber__c.field-meta.xml
<CustomField>
    <fullName>AddresNumber__c</fullName>
    <description>AddresNumber</description>
    <externalDeveloperName>AddresNumber</externalDeveloperName>
    <label>AddresNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>