force-app/main/default/objects/SAP_Companies__x/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <externalDeveloperName>Country</externalDeveloperName>
    <label>Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>