force-app/main/default/objects/SAP_Companies__x/fields/CreditArea__c.field-meta.xml
<CustomField>
    <fullName>CreditArea__c</fullName>
    <description>CreditArea</description>
    <externalDeveloperName>CreditArea</externalDeveloperName>
    <label>CreditArea</label>
    <length>4</length>
    <type>Text</type>
</CustomField>