force-app/main/default/objects/SAP_Companies__x/fields/NIFCom__c.field-meta.xml
<CustomField>
    <fullName>NIFCom__c</fullName>
    <description>NIFCom</description>
    <externalDeveloperName>NIFCom</externalDeveloperName>
    <label>NIFCom</label>
    <length>20</length>
    <type>Text</type>
</CustomField>