force-app/main/default/objects/SAP_Companies__x/fields/Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Obsolete</description>
    <externalDeveloperName>Obsolete</externalDeveloperName>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>