force-app/main/default/objects/SAP_Companies__x/fields/SapCode__c.field-meta.xml
<CustomField>
    <fullName>SapCode__c</fullName>
    <description>SapCode</description>
    <externalDeveloperName>SapCode</externalDeveloperName>
    <label>SapCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>